src/test/deca/context/valid/personalTests/greater.deca
// Test GREATER

{
    int a = 1;
    int b = 2;

    float c = 1.0;
    float d = 2.0;

    if (a > b) {
        println("a > b");
    } else {
        println("a <= b");
    }

    if (c > d) {
        println("c > d");
    } else {
        println("c <= d");
    }

    if (a > c) {
        println("a > c");
    } else {
        println("a <= c");
    }

    3.1 > 3.0;
}