src/test/deca/context/invalid/personalTests/bs_incompatible.deca
{
    float a = 3.14<<3;
    println("Test">>2);
}